# programmers_calculator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build
include/: number.h  parser.h  stack.h  utils.h
src/: .gitignore  Makefile  file.c  lexer.l  main.c  meson.build  number.c  old_parser.c  operations.c  parser.c  parser.y  pc.c  stack.c  utils.c
src/hashtable/: hash.c  hash.h  hashtable.c  mem.c  mem.h  meson.build  set.c  set.h
src/unittests/: .gitignore  Makefile  unittest.c
test/: meson.build  unittest.c
test/unittests/: addition.c  and.c  copy_number.c  dec2binary.c  hex2binary.c  lshift.c  meson.build  or.c  print.c  rshift.c  shifts.c  subtraction.c  twos_comp.c  unittest_utils.c  unittest_utils.h  wide.c
test/unittests/inputs/: d2b.txt  h2b.txt  lshift.txt  rshift.txt
tests/: unittests.txt
